--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Jessica Araujo">
     <meta name="description"
-        content="Projeto desenvolvido para conclusão do curso de Desenvolvimento Web para iniciantes- WoMakeCoders. 
+        content="Projeto desenvolvido para conclusão do curso de Desenvolvimento Web para iniciantes- WoMakersCode. 
                 Nesse trabalho está sendo aplicado o HTML, CSS e JavaScript, buscando a acessibilidade e responsividade para que o máximo de pessoas possam conseguir acessar a esse projeto de forma que, tenha uma boa experiência.">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
